# ice-sheets

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
datasets/: antarctica.csv  greenland.csv  ice-mass-sheet-balance-antarctica.csv  ice-mass-sheet-balance-greenland.csv
src/ice_sheets/: __init__.py  _version.py  datasets.py
src/ice_sheets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_datasets.py
