[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ice_sheets"
dynamic = ["version"]
dependencies = [
    "pooch",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/ice_sheets/_version.py"
